[package]
name = "compiler"
version = "0.1.0"
authors = [
    "Hafidh Muqsithanova Sukarno <hafidhmn@gmail.com>",
]
edition = "2021"
rust-version = "1.65.0"
description = "Compiler for <LANG> language"
license = "BSD-3-Clause"
keywords = ["cli", "compiler"]
categories = [
    "command-line-utilities",
    "compilers",
    "parser-implementations",
]

[dependencies]
logos = "0.12.1"
